--- a/App.config
+++ b/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Win_Duster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
+    <userSettings>
+        <Win_Duster.Properties.Settings>
+            <setting name="theme" serializeAs="String">
+                <value>Light</value>
+            </setting>
+            <setting name="style_color" serializeAs="String">
+                <value>Blue</value>
+            </setting>
+        </Win_Duster.Properties.Settings>
+    </userSettings>
 </configuration>
